--- a/portfolio.html
+++ b/portfolio.html
@@ -47,16 +47,10 @@
         <!-- Contacts -->
         <ul class="fillter-contact-links">
           <li class="fillter-contact">
-            <a
-              href="mailto:info@devstudio.com"
-              style="color: var(--slate, #434455)"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="fillter-contact">
-            <a href="tel:+11(000)111-11-11" style="color: var(--slate, #434455)"
-              >+11(000)111-11-11</a
-            >
+            <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
           </li>
         </ul>
       </div>
