--- a/portfolio.html
+++ b/portfolio.html
@@ -21,17 +21,12 @@
       referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
-    <style>
-      body {
-        font-family: "Roboto", sans-serif;
-      }
-    </style>
   </head>
-  <body style="background-color: #fff">
+  <body>
     <!-- Menu -->
     <header>
-      <div class="container">
-        <a href="#" class="fillter-menu-links">
+      <div class="container-1">
+        <a href="./index.html" class="fillter-menu-links">
           <span class="fillter-studio">Web</span
           ><span class="fillter-name">Studio</span></a
         >
@@ -58,7 +53,7 @@
     <main>
       <!-- Filler Btn -->
       <section>
-        <div class="container">
+        <div class="container-2">
           <ul class="social-links">
             <li class="fillter-item">
               <a href="#">All</a>
@@ -80,7 +75,7 @@
       </section>
       <!-- Images list  -->
       <section>
-        <div class="container">
+        <div class="container-4">
           <ul class="portfolio-list">
             <li>
               <img
@@ -172,7 +167,7 @@
       </section>
     </main>
     <footer class="fillter-bottom-section">
-      <div class="container">
+      <div class="container-5">
         <a href="#" class="fillter-menu-links"
           ><span class="fillter-studio">Web</span
           ><span class="fillter-footer-name">Studio</span></a
