--- a/index.html
+++ b/index.html
@@ -20,47 +20,47 @@
     <!-- Menu -->
     <header>
       <div class="container-1">
-        <a href="#" class="fillter-menu-links">
-          <span class="fillter-studio">Web</span
-          ><span class="fillter-name">Studio</span></a
-        >
-        <nav>
+        <nav class="head-links">
+          <a href="#" class="fillter-logo-links">
+            <span class="fillter-studio">Web</span
+            ><span class="fillter-name">Studio</span></a
+          >
           <ul class="fillter-web-links">
-            <li><a href="./index.html" class="fillter-links">Studio</a></li>
-            <li>
-              <a href="./portfolio.html" class="fillter-links">Portfolio</a>
+            <li class="fillter-links-1"><a href="./index.html">Studio</a></li>
+            <li class="fillter-links-2">
+              <a href="./portfolio.html">Portfolio</a>
             </li>
-            <li><a href="#" class="fillter-links">Contacts</a></li>
+            <li class="fillter-links-3"><a href="#">Contacts</a></li>
+          </ul>
+          <!-- Contacts -->
+          <ul class="fillter-contact-links">
+            <li class="fillter-contact-1">
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="fillter-contact-2">
+              <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
+            </li>
           </ul>
         </nav>
-        <!-- Contacts -->
-        <ul class="fillter-contact-links">
-          <li>
-            <a href="mailto:info@devstudio.com" class="fillter-contact"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+11(000)111-11-11" class="fillter-contact"
-              >+11(000)111-11-11</a
-            >
-          </li>
-        </ul>
       </div>
     </header>
     <!-- Main Info -->
     <main>
-      <article class="main-info">
-        <h1 class="fillter-business">Effective Solutions for Your Business</h1>
-        <ul class="fillter-order-service">
-          <li>
-            <button type="button"></button>
-            <a href="./portfolio.html" class="fillter-service-btn"
-              >Order Service</a
-            >
-          </li>
-        </ul>
-      </article>
+      <div>
+        <article class="main-info">
+          <h1 class="fillter-business">
+            Effective Solutions for Your Business
+          </h1>
+          <ul class="fillter-order-service">
+            <li>
+              <button type="button"></button>
+              <a href="./portfolio.html" class="fillter-service-btn"
+                >Order Service</a
+              >
+            </li>
+          </ul>
+        </article>
+      </div>
       <!-- Side Info -->
       <section>
         <div class="container-3">
@@ -179,7 +179,7 @@
     <!-- Footer -->
     <footer class="fillter-bottom-section">
       <div class="container-5">
-        <a href="#" class="fillter-menu-links"
+        <a href="#" class="fillter-logo-links-bottom"
           ><span class="fillter-bottom-studio">Web</span
           ><span class="fillter-footer-name">STUDIO</span></a
         >
