--- a/portfolio.html
+++ b/portfolio.html
@@ -26,28 +26,28 @@
     <!-- Menu -->
     <header>
       <div class="container-1">
-        <a href="./index.html" class="fillter-menu-links">
-          <span class="fillter-studio">Web</span
-          ><span class="fillter-name">Studio</span></a
-        >
-        <nav>
+        <nav class="head-links">
+          <a href="./index.html" class="fillter-logo-links">
+            <span class="fillter-studio">Web</span
+            ><span class="fillter-name">Studio</span></a
+          >
           <ul class="fillter-web-links">
-            <li class="fillter-links"><a href="./index.html">Studio</a></li>
-            <li class="fillter-links">
+            <li class="fillter-links-1"><a href="./index.html">Studio</a></li>
+            <li class="fillter-links-2">
               <a href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="fillter-links"><a href="#">Contacts</a></li>
+            <li class="fillter-links-3"><a href="#">Contacts</a></li>
+          </ul>
+          <!-- Contacts -->
+          <ul class="fillter-contact-links">
+            <li class="fillter-contact-1">
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="fillter-contact-2">
+              <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
+            </li>
           </ul>
         </nav>
-        <!-- Contacts -->
-        <ul class="fillter-contact-links">
-          <li class="fillter-contact">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="fillter-contact">
-            <a href="tel:+11(000)111-11-11">+11(000)111-11-11</a>
-          </li>
-        </ul>
       </div>
     </header>
     <main>
@@ -168,7 +168,7 @@
     </main>
     <footer class="fillter-bottom-section">
       <div class="container-5">
-        <a href="#" class="fillter-menu-links"
+        <a href="#" class="fillter-logo-links-bottom"
           ><span class="fillter-studio">Web</span
           ><span class="fillter-footer-name">Studio</span></a
         >
