--- a/portfolio.html
+++ b/portfolio.html
@@ -54,21 +54,22 @@
       <!-- Filler Btn -->
       <section>
         <div class="container-2">
+          <h1 class="hidden-heading">Portfolio</h1>
           <ul class="social-links">
             <li class="fillter-item">
-              <a href="#">All</a>
+              <button type="button">All</button>
             </li>
             <li class="fillter-item">
-              <a href="#">Web Site</a>
+              <button type="button">Web Site</button>
             </li>
             <li class="fillter-item">
-              <a href="#">App</a>
+              <button type="button">App</button>
             </li>
             <li class="fillter-item">
-              <a href="#">Design</a>
+              <button type="button">Design</button>
             </li>
             <li class="fillter-item">
-              <a href="#">Marketing</a>
+              <button type="button">Marketing</button>
             </li>
           </ul>
         </div>
@@ -83,9 +84,9 @@
                 alt="Purple colored Bank application with multiple design options"
                 width="360"
                 height="300" />
-              <p class="fillter-portfolio-maintext">
+              <h2 class="fillter-portfolio-maintext">
                 Banking App Interface Concept
-              </p>
+              </h2>
               <p class="fillter-portfolio-sidetext">App</p>
             </li>
             <li>
@@ -94,7 +95,7 @@
                 alt="Mobilephone paying via "
                 width="360"
                 height="300" />
-              <p class="fillter-portfolio-maintext">Cashless Payment</p>
+              <h2 class="fillter-portfolio-maintext">Cashless Payment</h2>
               <p class="fillter-portfolio-sidetext">Marketing</p>
             </li>
             <li>
@@ -103,7 +104,7 @@
                 alt="Laptop with mobilephone in front"
                 width="360"
                 height="300" />
-              <p class="fillter-portfolio-maintext">Meditation App</p>
+              <h2 class="fillter-portfolio-maintext">Meditation App</h2>
               <p class="fillter-portfolio-sidetext">App</p>
             </li>
             <li>
@@ -112,7 +113,7 @@
                 alt="Car with open window with a person inside holding steering wheel in a black gloves"
                 width="360"
                 height="300" />
-              <p class="fillter-portfolio-maintext">Taxi Service</p>
+              <h2 class="fillter-portfolio-maintext">Taxi Service</h2>
               <p class="fillter-portfolio-sidetext">Marketing</p>
             </li>
             <li>
@@ -121,7 +122,7 @@
                 alt="Mobilephone showing a illustrations of a moon"
                 width="360"
                 height="300" />
-              <p class="fillter-portfolio-maintext">Screen Illustrations</p>
+              <h2 class="fillter-portfolio-maintext">Screen Illustrations</h2>
               <p class="fillter-portfolio-sidetext">Design</p>
             </li>
             <li>
@@ -130,7 +131,7 @@
                 alt="Woman smiling wearing orange sweater and hat looking at mobilephone"
                 width="360"
                 height="300" />
-              <p class="fillter-portfolio-maintext">Online Courses</p>
+              <h2 class="fillter-portfolio-maintext">Online Courses</h2>
               <p class="fillter-portfolio-sidetext">Marketing</p>
             </li>
             <li>
@@ -139,9 +140,9 @@
                 alt="New application design illustrations"
                 width="360"
                 height="300" />
-              <p class="fillter-portfolio-maintext">
+              <h2 class="fillter-portfolio-maintext">
                 Instagram Stories Concept
-              </p>
+              </h2>
               <p class="fillter-portfolio-sidetext">Design</p>
             </li>
             <li>
@@ -150,7 +151,7 @@
                 alt="Woman wearing white walking with a bag of organic food"
                 width="360"
                 height="300" />
-              <p class="fillter-portfolio-maintext">Organic Food</p>
+              <h2 class="fillter-portfolio-maintext">Organic Food</h2>
               <p class="fillter-portfolio-sidetext">Web Site</p>
             </li>
             <li>
@@ -159,7 +160,7 @@
                 alt="Person making a Cafe Latte"
                 width="360"
                 height="300" />
-              <p class="fillter-portfolio-maintext">Fresh Coffee</p>
+              <h2 class="fillter-portfolio-maintext">Fresh Coffee</h2>
               <p class="fillter-portfolio-sidetext">Web Site</p>
             </li>
           </ul>
