Made some changes

--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
           </h1>
           <ul class="fillter-order-service">
             <li>
-              <button type="button"></button>
-              <a href="./portfolio.html" class="fillter-service-btn"
-                >Order Service</a
-              >
+              <button type="button" class="fillter-service-btn">
+                Order Service
+              </button>
             </li>
           </ul>
         </article>
