--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
   <body>
     <!-- Menu -->
     <header>
-      <div class="container-1">
+      <div class="container">
         <nav class="head-links">
           <a href="#" class="fillter-logo-links">
             <span class="fillter-studio">Web</span
             ><span class="fillter-name">Studio</span></a
           >
           <ul class="fillter-web-links">
-            <li class="fillter-links-1"><a href="./index.html">Studio</a></li>
-            <li class="fillter-links-2">
+            <li class="fillter-links"><a href="./index.html">Studio</a></li>
+            <li class="fillter-links">
               <a href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="fillter-links-3"><a href="#">Contacts</a></li>
+            <li class="fillter-links"><a href="#">Contacts</a></li>
           </ul>
           <!-- Contacts -->
           <ul class="fillter-contact-links">
@@ -61,39 +61,37 @@
         </article>
       </div>
       <!-- Side Info -->
-      <section>
-        <div class="container-3">
-          <ul class="side-info">
-            <li class="fillter-row-info">
-              <h3 class="fillter-paragraph">Strategy</h3>
-              <p class="fillter-paragraph-info">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
-            </li>
-            <li class="fillter-row-info">
-              <h3 class="fillter-paragraph">Punctuality</h3>
-              <p class="fillter-paragraph-info">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
-            </li>
-            <li class="fillter-row-info">
-              <h3 class="fillter-paragraph">Diligence</h3>
-              <p class="fillter-paragraph-info">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
-            </li>
-            <li class="fillter-row-info">
-              <h3 class="fillter-paragraph">Technologies</h3>
-              <p class="fillter-paragraph-info">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
-            </li>
-          </ul>
-        </div>
+      <section class="section">
+        <ul class="side-info">
+          <li class="fillter-row-info">
+            <h3 class="fillter-paragraph">Strategy</h3>
+            <p class="fillter-paragraph-info">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li class="fillter-row-info">
+            <h3 class="fillter-paragraph">Punctuality</h3>
+            <p class="fillter-paragraph-info">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li class="fillter-row-info">
+            <h3 class="fillter-paragraph">Diligence</h3>
+            <p class="fillter-paragraph-info">
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li class="fillter-row-info">
+            <h3 class="fillter-paragraph">Technologies</h3>
+            <p class="fillter-paragraph-info">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
       <!-- Studio Info -->
       <section class="fillter-studio-info">
@@ -127,7 +125,7 @@
       <!-- Team -->
       <section class="fillter-team-section">
         <h2 class="team">Our Team</h2>
-        <div class="container-6">
+        <div class="container">
           <figure class="fillter-team-info">
             <img
               src="./images/img.jpg"
@@ -177,16 +175,14 @@
     </main>
     <!-- Footer -->
     <footer class="fillter-bottom-section">
-      <div class="container-5">
-        <a href="#" class="fillter-logo-links-bottom"
-          ><span class="fillter-bottom-studio">Web</span
-          ><span class="fillter-footer-name">STUDIO</span></a
-        >
-        <p class="fillter-footer-info">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+      <a href="#" class="fillter-logo-links-bottom"
+        ><span class="fillter-bottom-studio">Web</span
+        ><span class="fillter-footer-name">STUDIO</span></a
+      >
+      <p class="fillter-footer-info">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
