--- a/portfolio.html
+++ b/portfolio.html
@@ -25,18 +25,18 @@
   <body>
     <!-- Menu -->
     <header>
-      <div class="container-1">
+      <div class="container">
         <nav class="head-links">
           <a href="./index.html" class="fillter-logo-links">
             <span class="fillter-studio">Web</span
             ><span class="fillter-name">Studio</span></a
           >
           <ul class="fillter-web-links">
-            <li class="fillter-links-1"><a href="./index.html">Studio</a></li>
-            <li class="fillter-links-2">
+            <li class="fillter-links"><a href="./index.html">Studio</a></li>
+            <li class="fillter-links">
               <a href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="fillter-links-3"><a href="#">Contacts</a></li>
+            <li class="fillter-links"><a href="#">Contacts</a></li>
           </ul>
           <!-- Contacts -->
           <ul class="fillter-contact-links">
@@ -53,7 +53,7 @@
     <main>
       <!-- Filler Btn -->
       <section>
-        <div class="container-2">
+        <div class="container">
           <h1 class="hidden-heading">Portfolio</h1>
           <ul class="social-links">
             <li class="fillter-item">
@@ -76,108 +76,122 @@
       </section>
       <!-- Images list  -->
       <section>
-        <div class="container-4">
-          <ul class="portfolio-list">
-            <li>
-              <img
-                src="./images/projectcard1.jpg"
-                alt="Purple colored Bank application with multiple design options"
-                width="360"
-                height="300" />
+        <ul class="portfolio-list">
+          <li>
+            <img
+              src="./images/projectcard1.jpg"
+              alt="Purple colored Bank application with multiple design options"
+              width="360"
+              height="300" />
+            <div class="border-box">
               <h2 class="fillter-portfolio-maintext">
                 Banking App Interface Concept
               </h2>
               <p class="fillter-portfolio-sidetext">App</p>
-            </li>
-            <li>
-              <img
-                src="./images/projectcard2.jpg"
-                alt="Mobilephone paying via "
-                width="360"
-                height="300" />
+            </div>
+          </li>
+          <li>
+            <img
+              src="./images/projectcard2.jpg"
+              alt="Mobilephone paying via "
+              width="360"
+              height="300" />
+            <div class="border-box">
               <h2 class="fillter-portfolio-maintext">Cashless Payment</h2>
               <p class="fillter-portfolio-sidetext">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/projectcard3.jpg"
-                alt="Laptop with mobilephone in front"
-                width="360"
-                height="300" />
+            </div>
+          </li>
+          <li>
+            <img
+              src="./images/projectcard3.jpg"
+              alt="Laptop with mobilephone in front"
+              width="360"
+              height="300" />
+            <div class="border-box">
               <h2 class="fillter-portfolio-maintext">Meditation App</h2>
               <p class="fillter-portfolio-sidetext">App</p>
-            </li>
-            <li>
-              <img
-                src="./images/projectcard4.jpg"
-                alt="Car with open window with a person inside holding steering wheel in a black gloves"
-                width="360"
-                height="300" />
+            </div>
+          </li>
+          <li>
+            <img
+              src="./images/projectcard4.jpg"
+              alt="Car with open window with a person inside holding steering wheel in a black gloves"
+              width="360"
+              height="300" />
+            <div class="border-box">
               <h2 class="fillter-portfolio-maintext">Taxi Service</h2>
               <p class="fillter-portfolio-sidetext">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/projectcard5.jpg"
-                alt="Mobilephone showing a illustrations of a moon"
-                width="360"
-                height="300" />
+            </div>
+          </li>
+          <li>
+            <img
+              src="./images/projectcard5.jpg"
+              alt="Mobilephone showing a illustrations of a moon"
+              width="360"
+              height="300" />
+            <div class="border-box">
               <h2 class="fillter-portfolio-maintext">Screen Illustrations</h2>
               <p class="fillter-portfolio-sidetext">Design</p>
-            </li>
-            <li>
-              <img
-                src="./images/projectcard6.jpg"
-                alt="Woman smiling wearing orange sweater and hat looking at mobilephone"
-                width="360"
-                height="300" />
+            </div>
+          </li>
+          <li>
+            <img
+              src="./images/projectcard6.jpg"
+              alt="Woman smiling wearing orange sweater and hat looking at mobilephone"
+              width="360"
+              height="300" />
+            <div class="border-box">
               <h2 class="fillter-portfolio-maintext">Online Courses</h2>
               <p class="fillter-portfolio-sidetext">Marketing</p>
-            </li>
-            <li>
-              <img
-                src="./images/projectcard7.jpg"
-                alt="New application design illustrations"
-                width="360"
-                height="300" />
+            </div>
+          </li>
+          <li>
+            <img
+              src="./images/projectcard7.jpg"
+              alt="New application design illustrations"
+              width="360"
+              height="300" />
+            <div class="border-box">
               <h2 class="fillter-portfolio-maintext">
                 Instagram Stories Concept
               </h2>
               <p class="fillter-portfolio-sidetext">Design</p>
-            </li>
-            <li>
-              <img
-                src="./images/projectcard8.jpg"
-                alt="Woman wearing white walking with a bag of organic food"
-                width="360"
-                height="300" />
+            </div>
+          </li>
+          <li>
+            <img
+              src="./images/projectcard8.jpg"
+              alt="Woman wearing white walking with a bag of organic food"
+              width="360"
+              height="300" />
+            <div class="border-box">
               <h2 class="fillter-portfolio-maintext">Organic Food</h2>
               <p class="fillter-portfolio-sidetext">Web Site</p>
-            </li>
-            <li>
-              <img
-                src="./images/projectcard9.jpg"
-                alt="Person making a Cafe Latte"
-                width="360"
-                height="300" />
+            </div>
+          </li>
+          <li>
+            <img
+              src="./images/projectcard9.jpg"
+              alt="Person making a Cafe Latte"
+              width="360"
+              height="300" />
+            <div class="border-box">
               <h2 class="fillter-portfolio-maintext">Fresh Coffee</h2>
               <p class="fillter-portfolio-sidetext">Web Site</p>
-            </li>
-          </ul>
-        </div>
+            </div>
+          </li>
+        </ul>
       </section>
     </main>
     <footer class="fillter-bottom-section">
-      <div class="container-5">
-        <a href="#" class="fillter-logo-links-bottom"
-          ><span class="fillter-studio">Web</span
-          ><span class="fillter-footer-name">Studio</span></a
-        >
-        <p class="fillter-footer-info">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
+      <a href="#" class="fillter-logo-links-bottom"
+        ><span class="fillter-studio">Web</span
+        ><span class="fillter-footer-name">Studio</span></a
+      >
+      <p class="fillter-footer-info">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
