--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <!-- Studio Info -->
       <section class="fillter-studio-info">
         <h2 class="fillter-studio-paragraph">What are we doing</h2>
-        <div class="container-5">
+        <div>
           <ul class="fillter-img">
             <li>
               <img
