--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
   <body>
     <!-- Menu -->
     <header>
-      <div class="container">
+      <div>
         <nav class="head-links">
           <a href="./index.html" class="fillter-logo-links">
             <span class="fillter-studio">Web</span
@@ -55,132 +55,136 @@
       <section>
         <div class="container">
           <h1 class="hidden-heading">Portfolio</h1>
-          <ul class="social-links">
-            <li class="fillter-item">
-              <button type="button">All</button>
-            </li>
-            <li class="fillter-item">
-              <button type="button">Web Site</button>
-            </li>
-            <li class="fillter-item">
-              <button type="button">App</button>
-            </li>
-            <li class="fillter-item">
-              <button type="button">Design</button>
-            </li>
-            <li class="fillter-item">
-              <button type="button">Marketing</button>
-            </li>
-          </ul>
+          <div class="child">
+            <ul class="social-links">
+              <li class="fillter-item">
+                <button type="button">All</button>
+              </li>
+              <li class="fillter-item">
+                <button type="button">Web Site</button>
+              </li>
+              <li class="fillter-item">
+                <button type="button">App</button>
+              </li>
+              <li class="fillter-item">
+                <button type="button">Design</button>
+              </li>
+              <li class="fillter-item">
+                <button type="button">Marketing</button>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <!-- Images list  -->
       <section>
-        <ul class="portfolio-list">
-          <li>
-            <img
-              src="./images/projectcard1.jpg"
-              alt="Purple colored Bank application with multiple design options"
-              width="360"
-              height="300" />
-            <div class="border-box">
-              <h2 class="fillter-portfolio-maintext">
-                Banking App Interface Concept
-              </h2>
-              <p class="fillter-portfolio-sidetext">App</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./images/projectcard2.jpg"
-              alt="Mobilephone paying via "
-              width="360"
-              height="300" />
-            <div class="border-box">
-              <h2 class="fillter-portfolio-maintext">Cashless Payment</h2>
-              <p class="fillter-portfolio-sidetext">Marketing</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./images/projectcard3.jpg"
-              alt="Laptop with mobilephone in front"
-              width="360"
-              height="300" />
-            <div class="border-box">
-              <h2 class="fillter-portfolio-maintext">Meditation App</h2>
-              <p class="fillter-portfolio-sidetext">App</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./images/projectcard4.jpg"
-              alt="Car with open window with a person inside holding steering wheel in a black gloves"
-              width="360"
-              height="300" />
-            <div class="border-box">
-              <h2 class="fillter-portfolio-maintext">Taxi Service</h2>
-              <p class="fillter-portfolio-sidetext">Marketing</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./images/projectcard5.jpg"
-              alt="Mobilephone showing a illustrations of a moon"
-              width="360"
-              height="300" />
-            <div class="border-box">
-              <h2 class="fillter-portfolio-maintext">Screen Illustrations</h2>
-              <p class="fillter-portfolio-sidetext">Design</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./images/projectcard6.jpg"
-              alt="Woman smiling wearing orange sweater and hat looking at mobilephone"
-              width="360"
-              height="300" />
-            <div class="border-box">
-              <h2 class="fillter-portfolio-maintext">Online Courses</h2>
-              <p class="fillter-portfolio-sidetext">Marketing</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./images/projectcard7.jpg"
-              alt="New application design illustrations"
-              width="360"
-              height="300" />
-            <div class="border-box">
-              <h2 class="fillter-portfolio-maintext">
-                Instagram Stories Concept
-              </h2>
-              <p class="fillter-portfolio-sidetext">Design</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./images/projectcard8.jpg"
-              alt="Woman wearing white walking with a bag of organic food"
-              width="360"
-              height="300" />
-            <div class="border-box">
-              <h2 class="fillter-portfolio-maintext">Organic Food</h2>
-              <p class="fillter-portfolio-sidetext">Web Site</p>
-            </div>
-          </li>
-          <li>
-            <img
-              src="./images/projectcard9.jpg"
-              alt="Person making a Cafe Latte"
-              width="360"
-              height="300" />
-            <div class="border-box">
-              <h2 class="fillter-portfolio-maintext">Fresh Coffee</h2>
-              <p class="fillter-portfolio-sidetext">Web Site</p>
-            </div>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="portfolio-list">
+            <li>
+              <img
+                src="./images/projectcard1.jpg"
+                alt="Purple colored Bank application with multiple design options"
+                width="360"
+                height="300" />
+              <div class="border-box">
+                <h2 class="fillter-portfolio-maintext">
+                  Banking App Interface Concept
+                </h2>
+                <p class="fillter-portfolio-sidetext">App</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/projectcard2.jpg"
+                alt="Mobilephone paying via "
+                width="360"
+                height="300" />
+              <div class="border-box">
+                <h2 class="fillter-portfolio-maintext">Cashless Payment</h2>
+                <p class="fillter-portfolio-sidetext">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/projectcard3.jpg"
+                alt="Laptop with mobilephone in front"
+                width="360"
+                height="300" />
+              <div class="border-box">
+                <h2 class="fillter-portfolio-maintext">Meditation App</h2>
+                <p class="fillter-portfolio-sidetext">App</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/projectcard4.jpg"
+                alt="Car with open window with a person inside holding steering wheel in a black gloves"
+                width="360"
+                height="300" />
+              <div class="border-box">
+                <h2 class="fillter-portfolio-maintext">Taxi Service</h2>
+                <p class="fillter-portfolio-sidetext">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/projectcard5.jpg"
+                alt="Mobilephone showing a illustrations of a moon"
+                width="360"
+                height="300" />
+              <div class="border-box">
+                <h2 class="fillter-portfolio-maintext">Screen Illustrations</h2>
+                <p class="fillter-portfolio-sidetext">Design</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/projectcard6.jpg"
+                alt="Woman smiling wearing orange sweater and hat looking at mobilephone"
+                width="360"
+                height="300" />
+              <div class="border-box">
+                <h2 class="fillter-portfolio-maintext">Online Courses</h2>
+                <p class="fillter-portfolio-sidetext">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/projectcard7.jpg"
+                alt="New application design illustrations"
+                width="360"
+                height="300" />
+              <div class="border-box">
+                <h2 class="fillter-portfolio-maintext">
+                  Instagram Stories Concept
+                </h2>
+                <p class="fillter-portfolio-sidetext">Design</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/projectcard8.jpg"
+                alt="Woman wearing white walking with a bag of organic food"
+                width="360"
+                height="300" />
+              <div class="border-box">
+                <h2 class="fillter-portfolio-maintext">Organic Food</h2>
+                <p class="fillter-portfolio-sidetext">Web Site</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/projectcard9.jpg"
+                alt="Person making a Cafe Latte"
+                width="360"
+                height="300" />
+              <div class="border-box">
+                <h2 class="fillter-portfolio-maintext">Fresh Coffee</h2>
+                <p class="fillter-portfolio-sidetext">Web Site</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="fillter-bottom-section">
