--- a/index.html
+++ b/index.html
@@ -62,70 +62,76 @@
       </div>
       <!-- Side Info -->
       <section class="section">
-        <ul class="side-info">
-          <li class="fillter-row-info">
-            <h3 class="fillter-paragraph">Strategy</h3>
-            <p class="fillter-paragraph-info">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="fillter-row-info">
-            <h3 class="fillter-paragraph">Punctuality</h3>
-            <p class="fillter-paragraph-info">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="fillter-row-info">
-            <h3 class="fillter-paragraph">Diligence</h3>
-            <p class="fillter-paragraph-info">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="fillter-row-info">
-            <h3 class="fillter-paragraph">Technologies</h3>
-            <p class="fillter-paragraph-info">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <div class="child">
+            <ul class="side-info">
+              <li class="fillter-row-info">
+                <h3 class="fillter-paragraph">Strategy</h3>
+                <p class="fillter-paragraph-info">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </li>
+              <li class="fillter-row-info">
+                <h3 class="fillter-paragraph">Punctuality</h3>
+                <p class="fillter-paragraph-info">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </li>
+              <li class="fillter-row-info">
+                <h3 class="fillter-paragraph">Diligence</h3>
+                <p class="fillter-paragraph-info">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </li>
+              <li class="fillter-row-info">
+                <h3 class="fillter-paragraph">Technologies</h3>
+                <p class="fillter-paragraph-info">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </section>
       <!-- Studio Info -->
       <section class="fillter-studio-info">
-        <h2 class="fillter-studio-paragraph">What are we doing</h2>
-        <div>
-          <ul class="fillter-img">
-            <li>
-              <img
-                src="./images/desktopicon.jpg"
-                alt="Desktop srceen showing opened application window with drafts"
-                width="360"
-                height="300" />
-            </li>
-            <li>
-              <img
-                src="./images/mobilephone.jpg"
-                alt="Mobilephone showing advertisement with laptop in the background"
-                width="360"
-                height="300" />
-            </li>
-            <li>
-              <img
-                src="./images/mobilephoneapp.jpg"
-                alt="Inspiration for new app for mobilephones"
-                width="360"
-                height="300" />
-            </li>
-          </ul>
+        <div class="container">
+          <div class="child">
+            <h2 class="fillter-studio-paragraph">What are we doing</h2>
+            <ul class="fillter-img">
+              <li>
+                <img
+                  src="./images/desktopicon.jpg"
+                  alt="Desktop srceen showing opened application window with drafts"
+                  width="360"
+                  height="300" />
+              </li>
+              <li>
+                <img
+                  src="./images/mobilephone.jpg"
+                  alt="Mobilephone showing advertisement with laptop in the background"
+                  width="360"
+                  height="300" />
+              </li>
+              <li>
+                <img
+                  src="./images/mobilephoneapp.jpg"
+                  alt="Inspiration for new app for mobilephones"
+                  width="360"
+                  height="300" />
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <!-- Team -->
       <section class="fillter-team-section">
         <h2 class="team">Our Team</h2>
-        <div class="container">
+        <div class="team-position">
           <figure class="fillter-team-info">
             <img
               src="./images/img.jpg"
@@ -175,14 +181,18 @@
     </main>
     <!-- Footer -->
     <footer class="fillter-bottom-section">
-      <a href="#" class="fillter-logo-links-bottom"
-        ><span class="fillter-bottom-studio">Web</span
-        ><span class="fillter-footer-name">STUDIO</span></a
-      >
-      <p class="fillter-footer-info">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="child">
+          <a href="#" class="fillter-logo-links-bottom"
+            ><span class="fillter-bottom-studio">Web</span
+            ><span class="fillter-footer-name">STUDIO</span></a
+          >
+          <p class="fillter-footer-info">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
