--- a/portfolio.html
+++ b/portfolio.html
@@ -188,14 +188,18 @@
       </section>
     </main>
     <footer class="fillter-bottom-section">
-      <a href="#" class="fillter-logo-links-bottom"
-        ><span class="fillter-studio">Web</span
-        ><span class="fillter-footer-name">Studio</span></a
-      >
-      <p class="fillter-footer-info">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="child">
+          <a href="#" class="fillter-logo-links-bottom"
+            ><span class="fillter-studio">Web</span
+            ><span class="fillter-footer-name">Studio</span></a
+          >
+          <p class="fillter-footer-info">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
